--- a/slides/index.html
+++ b/slides/index.html
@@ -1,67 +1,130 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html> <!--<![endif]-->
+<!--[if lt IE 7]>
+<html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Web Audio Api + Midi Api</title>
-  <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
-  
-  <link rel="stylesheet" href="css/customTheme.css">
-  
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Web Audio Api + Midi Api</title>
+    <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+
+
 </head>
 <body>
-  <!--[if lt IE 7]>
-    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-  <![endif]-->
-  <div class="reveal">
+<!--[if lt IE 7]>
+<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to
+    improve your experience.</p>
+<![endif]-->
+<div class="reveal">
     <div class="slides">
 
-      <section data-markdown data-state="bg-lavendar">
-        <script type="text/template">
-            ## initial slide
+        <section data-markdown data-state="bg-blacks">
+            <script type="text/template">
+                # Web Audio + Midi API
 
-            A slide using markdown with a [link](http://google.com).
+                ### @etoxin
+            </script>
+        </section>
+
+
+        <section data-markdown>
+            <script type="text/template">
+                # What is the API
+            </script>
+        </section>
+
+
+        <section>
+            <h1>Browser Compatibilty</h1>
+            <hr/>
+            <img src="images/001.png" alt=""/>
+        </section>
+
+
+        <section data-state="bg-lavendar">
+            <h1>Audio Context</h1>
+
+            <hr/>
+
+
+
+            <hr/>
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-play" aria-hidden="true"></span> Start Audio Context</button>
+                <button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-stop" aria-hidden="true"></span> Stop Audio Context</button>
+            </div>
+        </section>
+
+        <div>
+        </div>
+
+        <script src="bower_components/reveal.js/lib/js/head.min.js"></script>
+        <script src="bower_components/reveal.js/js/reveal.min.js"></script>
+
+        <script>
+            Reveal.initialize({
+                transition: 'linear',
+                backgroundTransition: 'slide',
+                dependencies: [
+                    // Cross-browser shim that fully implements classList - https://github.com/eligrey/classList.js/
+                    {
+                        src: 'bower_components/reveal.js/lib/js/classList.js', condition: function () {
+                        return !document.body.classList;
+                    }
+                    },
+
+                    // Interpret Markdown in <section> elements
+                    {
+                        src: 'bower_components/reveal.js/plugin/markdown/marked.js', condition: function () {
+                        return !!document.querySelector('[data-markdown]');
+                    }
+                    },
+                    {
+                        src: 'bower_components/reveal.js/plugin/markdown/markdown.js', condition: function () {
+                        return !!document.querySelector('[data-markdown]');
+                    }
+                    },
+
+                    // Syntax highlight for <code> elements
+                    {
+                        src: 'bower_components/reveal.js/plugin/highlight/highlight.js',
+                        async: true,
+                        callback: function () {
+                            hljs.initHighlightingOnLoad();
+                        }
+                    },
+
+                    // Zoom in and out with Alt+click
+                    {
+                        src: 'bower_components/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function () {
+                        return !!document.body.classList;
+                    }
+                    },
+
+                    // Speaker notes
+                    {
+                        src: 'bower_components/reveal.js/plugin/notes/notes.js', async: true, condition: function () {
+                        return !!document.body.classList;
+                    }
+                    },
+
+                    // Remote control your reveal.js presentation using a touch device
+                    {
+                        src: 'bower_components/reveal.js/plugin/remotes/remotes.js',
+                        async: true,
+                        condition: function () {
+                            return !!document.body.classList;
+                        }
+                    }
+                ]
+            });
         </script>
-      </section>
-
-      <section data-state="bg-lavendar">
-        <h1>A regular slide</h1>
-      </section>
-
-    <div>
-  </div>
-
-  <script src="bower_components/reveal.js/lib/js/head.min.js"></script>
-  <script src="bower_components/reveal.js/js/reveal.min.js"></script>
-
-  <script>
-   Reveal.initialize({
-    transition: 'linear',
-    backgroundTransition: 'slide',
-    dependencies: [
-        // Cross-browser shim that fully implements classList - https://github.com/eligrey/classList.js/
-        { src: 'bower_components/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-
-        // Interpret Markdown in <section> elements
-        { src: 'bower_components/reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-        { src: 'bower_components/reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-
-        // Syntax highlight for <code> elements
-        { src: 'bower_components/reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-
-        // Zoom in and out with Alt+click
-        { src: 'bower_components/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-
-        // Speaker notes
-        { src: 'bower_components/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
-
-        // Remote control your reveal.js presentation using a touch device
-        { src: 'bower_components/reveal.js/plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
-    ]
-  });
-  </script>
 </body>
 </html>
