--- a/slides/index.html
+++ b/slides/index.html
@@ -38,11 +38,6 @@
         </section>
 
 
-        <section>
-            <h1>Browser Compatibilty</h1>
-            <hr/>
-            <img src="images/001.png" alt=""/>
-        </section>
 
 
         <section>
@@ -126,28 +121,6 @@
             <h1>StereoPannerNode</h1>
             <h1>WaveShaperNode</h1>
             <h1>PeriodicWave</h1>
-        </section>
-
-        <section ng-controller="no2Ctrl as no2Ctrl">
-            <h1>Gain Node</h1>
-
-            <pre><code class="javascript">
-                // Add Gain Node
-                var gainNode = context.createGain();
-                oscillator.connect(gainNode);
-                gainNode.connect(context.destination);
-
-                gainNode.gain.value = 0.5;
-            </code></pre>
-
-            <div class="btn-group" role="group">
-                <button type="button" class="btn btn-lg btn-success" ng-click="no2Ctrl.start()"><span class="glyphicon glyphicon-play"></span> Start</button>
-                <button type="button" class="btn btn-lg btn-danger" ng-click="no2Ctrl.stop()"><span class="glyphicon glyphicon-stop"></span>Disconnect</button>
-            </div>
-            <div class="btn-group" role="group">
-                <button type="button" class="btn btn-lg btn-primary" ng-click="no2Ctrl.changeGain(-1)">Gain 0</button>
-                <button type="button" class="btn btn-lg btn-primary" ng-click="no2Ctrl.changeGain(1)">Gain 1</button>
-            </div>
         </section>
 
         <section ng-controller="no3Ctrl as no3Ctrl">
@@ -299,6 +272,10 @@
 
 
             </div>
+        </section>
+
+        <section>
+            <h1>Thank you</h1>
         </section>
     </div>
 </div>
